<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/materialBackground">
    <RelativeLayout
            android:id="@+id/card_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true">
        <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:layout_marginRight="24dp"
                android:layout_marginLeft="24dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="16dp"
                app:cardBackgroundColor="@color/materialBackground">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="50dp"
                    android:orientation="vertical">
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:padding="16dp">
                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/associazione"
                            android:textAlignment="center"
                            android:textColor="@color/primaryTextColor"
                            android:textSize="28sp"/>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp">
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/nomePagamento"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/nome_pagamento"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/nome"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/cognomePagamento"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/cognome_pagamento"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/cognome"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textPersonName"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/causalePagamento"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/causale_pagamento"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/causale"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="textAutoCorrect"/>
                    </com.google.android.material.textfield.TextInputLayout>
                    <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/importoPagamento"
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/importo_pagamento"
                            android:layout_marginBottom="6dp"
                            app:boxCornerRadiusBottomEnd="12dp"
                            app:boxCornerRadiusBottomStart="12dp"
                            app:boxCornerRadiusTopEnd="12dp"
                            app:boxCornerRadiusTopStart="12dp">
                        <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/importo"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:inputType="numberDecimal"/>
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>
                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <com.google.android.material.button.MaterialButton
                            android:id="@+id/button_payment"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/dis_roundbutton"
                            android:text="@string/pulsante_pagamento"
                            android:textAllCaps="false"
                            android:enabled="false"
                            app:backgroundTint="@null"/>
                </LinearLayout>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                android:id="@+id/logoBTTPagamenti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_centerHorizontal="true"
                app:cardElevation="16dp"
                app:cardCornerRadius="50dp">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:src="@mipmap/ic_launcher_round"/>
        </com.google.android.material.card.MaterialCardView>
        <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="75dp"
                android:layout_toEndOf="@id/logoBTTPagamenti"
                app:cardElevation="16dp">
            <ImageView
                    android:layout_width="100dp"
                    android:layout_height="24dp"
                    android:src="@drawable/satispay_logo"/>
        </com.google.android.material.card.MaterialCardView>
    </RelativeLayout>
</RelativeLayout>